Updated links from http to HTTPS
The webpage was not working with the old http links.
Chnaged and working like a charm

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 
 <!-- share this -->
 <script type="text/javascript">var switchTo5x=true;</script>
-<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+<script type="text/javascript" src="https://w.sharethis.com/button/buttons.js"></script>
 <script type="text/javascript">stLight.options({publisher: "3c8eeb67-61af-4916-9f60-d20e4c0edf71", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
 <!-- end share this -->
 
 <!-- click to select -->
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <!-- end click to select -->
 
 </head>
@@ -38,7 +38,7 @@
 <div id="container">  
     <div id="header">
     	<div id="emailaddress"></div>
-    	<a href="http://reducespam.org" title="ReduceSpam.org"><img src="logoa.jpg" title="ReduceSpam.org" /></a>
+    	<a href="https://reducespam.org" title="ReduceSpam.org"><img src="logoa.jpg" title="ReduceSpam.org" /></a>
     </div>
     <div id="navbar">
     </div>
@@ -57,10 +57,10 @@
 			google_color_link = "3D81EE";
 			google_color_text = "000000";
 			google_color_url = "008000";
-			//-->
+			-->
 			</script>
 			<script type="text/javascript"
-  				src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+  				src="https://pagead2.googlesyndication.com/pagead/show_ads.js">
 			</script>
 			</center>
 		</div>
@@ -99,7 +99,7 @@
 			//-->
 			</script>
 			<script type="text/javascript"
-  				src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+  				src="https://pagead2.googlesyndication.com/pagead/show_ads.js">
 			</script>
 			</center>
 		</div>
