--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>ReduceSpam.org - Disposable Email Service</title>
+<title>Disposable Email Service</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <meta name="description" content="An open source approach to safer registration" />
 <meta name="title" content="Disposable Email System" />
@@ -12,9 +12,8 @@
 <!-- end no cache headers -->
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <meta http-equiv="Content-Language" content="en-us" />
-<meta name="DrivingA1994NissanMaximaMakesYouCool?" content="true" />
 <meta name="robots" content="all" />
-<meta name="Copyright" content="Copyright (c) 2007 - 2015 ChokLeong.com" />
+
 <!--  -->
 <meta http-equiv="imagetoolbar" content="no" />
 <meta name="MSSmartTagsPreventParsing" content="true" />
@@ -45,23 +44,7 @@
     <div id="contentbox">
     	<div class="ads">
 			<center>
-			<script type="text/javascript"><!--
-			google_ad_client = "pub-9985990683594436";
-			google_ad_width = 728;
-			google_ad_height = 90;
-			google_ad_format = "728x90_as";
-			google_ad_type = "text_image";
-			google_ad_channel = "";
-			google_color_border = "FFFFFF";
-			google_color_bg = "FFFFFF";
-			google_color_link = "3D81EE";
-			google_color_text = "000000";
-			google_color_url = "008000";
-			-->
-			</script>
-			<script type="text/javascript"
-  				src="https://pagead2.googlesyndication.com/pagead/show_ads.js">
-			</script>
+			<!-- No Ads -->
 			</center>
 		</div>
     
@@ -84,23 +67,7 @@
 		</div><!-- content -->
 		<div class="ads">
 			<center>
-			<script type="text/javascript"><!--
-			google_ad_client = "pub-9985990683594436";
-			google_ad_width = 728;
-			google_ad_height = 90;
-			google_ad_format = "728x90_as";
-			google_ad_type = "text_image";
-			google_ad_channel = "";
-			google_color_border = "FFFFFF";
-			google_color_bg = "FFFFFF";
-			google_color_link = "3D81EE";
-			google_color_text = "000000";
-			google_color_url = "008000";
-			//-->
-			</script>
-			<script type="text/javascript"
-  				src="https://pagead2.googlesyndication.com/pagead/show_ads.js">
-			</script>
+			<!-- No Ads -->
 			</center>
 		</div>
 		
@@ -123,7 +90,7 @@
 			</center>
 		</div>
 		
-    <div id="footer">&copy 2007 - 2015 <a href='http://reducespam.org'>ReduceSpam.org</a>  reuses the source code developped by Mark since 2006 from 2Prong.com (which is no longer active right now)</div> 
+    <div id="footer">&copy 2020 <a href='https://spam.cayuela.eu'>ReduceSpam.org</a>  reuses the source code developped by Mark since 2006 from 2Prong.com (which is no longer active right now)</div> 
     	
 </div><!-- container -->
 <div id="flashcopier"></div>
